--- a/styles.css
+++ b/styles.css
@@ -31,11 +31,25 @@ body {
   border-radius: 0.5em;
 }
 
+.nft-image:hover {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  content: url(./images/icon-view.svg);
+  color: hsla(178, 100%, 50%, 0.2); /*adding hover image, not done */
+}
+
 h1 {
   color: hsl(0, 0%, 100%);
   font-weight: 500;
   font-size: 1.2em;
   padding: 0.9em 0;
+}
+
+h1:hover {
+  cursor: pointer;
+  color: hsl(178, 100%, 50%);
 }
 
 p {
@@ -85,13 +99,19 @@ p {
   border: 1px solid hsl(0, 0%, 100%);
 }
 
+.creation {
+  padding-left: 1em;
+}
+
 .name {
   color: hsl(0, 0%, 100%);
   font-weight: 300;
   padding-left: 0.3em;
 }
-.creation {
-  padding-left: 1em;
+
+.name:hover {
+  cursor: pointer;
+  color: hsl(178, 100%, 50%);
 }
 
 .attribution {
