--- a/styles.css
+++ b/styles.css
@@ -26,18 +26,41 @@ body {
   background-color: hsl(216, 50%, 16%);
 }
 
+.nft-image-container {
+  position: relative;
+  width: 100%;
+}
+
 .nft-image {
   width: 100%;
   border-radius: 0.5em;
 }
 
-.nft-image:hover {
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 98%;
+  background-color: hsla(178, 100%, 50%, 0.6);
+  opacity: 0;
+  transition: opacity 0.3s;
+  border-radius: 0.5em;
+}
+
+.overlay-image {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.nft-image-container:hover .overlay,
+.nft-image-container:hover .overlay-image {
+  opacity: 1;
   cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  content: url(./images/icon-view.svg);
-  color: hsla(178, 100%, 50%, 0.2); /*adding hover image, not done */
 }
 
 h1 {
@@ -115,7 +138,7 @@ p {
 }
 
 .attribution {
-  font-size: 0.5em;
+  font-size: 0.7em;
   text-align: center;
   padding-top: 2em;
   color: white;
