footer moved to bottom of page and fixed some html

--- a/styles.css
+++ b/styles.css
@@ -4,15 +4,27 @@
   box-sizing: border-box;
 }
 
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+html,
+body {
+  height: 100%;
+}
+
 body {
   font-family: "Outfit";
   font-weight: normal;
   font-size: 18px;
   background-color: hsl(217, 54%, 11%);
-  height: 90vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 
 .container {
@@ -137,14 +149,15 @@ p {
   color: hsl(178, 100%, 50%);
 }
 
-.attribution {
+footer {
   font-size: 0.7em;
   text-align: center;
-  padding-top: 2em;
+  margin-top: auto;
   color: white;
+  padding-bottom: 1em;
 }
 
-.attribution a {
+footer a {
   color: hsl(228, 45%, 44%);
   text-decoration: none;
 }
